Gallery and Flip 10

--- a/StorhaugenWebsite/Pages/AddFood.razor
+++ b/StorhaugenWebsite/Pages/AddFood.razor
@@ -33,7 +33,7 @@
     }
 
     /* Only show blocker when in landscape orientation */
-    @media screen and (orientation: landscape) {
+    @@media screen and (orientation: landscape) {
         #landscape-blocker {
             display: flex !important;
         }
